feat: 채널 입장시, 채널 구성원에게 방장 정보 broadcast
- 클라이언트에서는 전달받은 방장정보와 자신의 role이 일치하면 '시작' 버튼 활성화